tests/error/array_errors/subscript_drop.err
Error: Drop violation (at $FILE:18:11)
   | 
16 | @guppy(module)
17 | def main() -> qubit:
18 |     return foo()[0]
   |            ^^^^^ Non-droppable items of expression with type `array[qubit,
   |                  10]` are leaked ...
   | 
18 |     return foo()[0]
   |                  - since only this subscript is used

Help: Consider assigning this value to a local variable before subscripting it

Guppy compilation failed due to 1 previous error
